--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -6,20 +6,23 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 <body>
   <div class="container">
     <img class="qrcode" src="/qr-code-component/images/image-qr-code.png" alt="qr_code">
-    <h1 class="header">Improve your front-end skills by building projects</h1>
-    <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
+    <div class="text">
+      <h1 class="header">Improve your front-end skills by building projects</h1>
+      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jeanie Chea</a>.
+    Coded by <a href="https://github.com/jechea14" target="_blank">Jeanie Chea</a>.
   </div>
 </body>
 </html>
