--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
+  <div class="container">
+    <div class="card">
+      <div class="image">
+        <img
+          src="https://raw.githubusercontent.com/jechea14/Frontend-Projects/243b9a6a1aaee949a9b430c08a368f170e0b4f08/order-summary-component/images/illustration-hero.svg"
+          class="img"></img>
+      </div>
+      <div class="desc">
+        <h1>Order Summary</h1>
 
-  Order Summary
+        <p>You can now listen to millions of </br>songs, audiobooks, and podcasts on </br>any
+          device anywhere you like!</p>
+      </div>
+      <div class="plan">
+        <img
+          src="https://raw.githubusercontent.com/jechea14/Frontend-Projects/243b9a6a1aaee949a9b430c08a368f170e0b4f08/order-summary-component/images/icon-music.svg"
+          </img>
+        <div class="plan-price">
+          <h3>Annual Plan</h3>
+          <p>$59.99/year</p>
+        </div>
+        <div class="change">
+          <p>Change</p>
+        </div>
+      </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <div class="payment-button">
+        <p>Proceed to Payment</p>
+      </div>
+      <p class="cancel-order">Cancel Order</p>
+    </div>
+  </div>
 
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
