--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -17,13 +17,16 @@
     <h1 class="advice-title">Advice #<span id="id"></span></h1>
     <div class="advice"></div>
     <!-- <button class="btn">click</button> -->
+    <picture>
+      <img src="./images/pattern-divider-mobile.svg" alt="">
+    </picture>
     <div class="btn">
-      <img src="./images/icon-dice.svg" alt="">
+      <img src="./images/icon-dice.svg" class="dice" alt="">
     </div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Jeanie Chea</a>.
   </div>
   <script src="app.js"></script>
 </body>
