--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -24,19 +24,15 @@
       <source media="(min-width: 768px)" srcset="./images/pattern-divider-desktop.svg">
       <img src="./images/pattern-divider-mobile.svg" alt="">
     </picture>
-    <div class="btn">
+    <button class="btn">
       <img src="./images/icon-dice.svg" alt="">
-    </div>
+    </button>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Jeanie Chea</a>.
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jeanie Chea</a>.
-  </div>
   <script src="app.js"></script>
 </body>
-</html>
 
+</html>
