--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -14,23 +14,38 @@
     <div class="container">
       <nav class="navbar">
         <ul>
-          <li><img src="./images/logo.svg" alt=""></li>
+          <li><img src="./images/logo.svg" alt="logo image"></li>
+          <li>Features</li>
+          <li>Company</li>
+          <li>Careers</li>
+          <li>About</li>
+        </ul>
+        <ul>
+          <li>Login</li>
+          <li><div id="register">Register</div></li>
+        </ul>
+        <!-- <ul>
+          <li><img src="./images/logo.svg" alt="logo image"></li>
           <li>
-            <img src="./images/icon-menu.svg" alt="menu icon">
-            <!-- <ul>
-              <li id="features">Features</li>
-                <ul>
-                  <li><img src="./images/icon-todo.svg" alt="todo icon">Todo List</li>
-                  <li><img src="./images/icon-calendar.svg" alt="calendar icon">Calendar</li>
-                  <li><img src="./images//icon-reminders.svg" alt="reminder icon">Reminders</li>
-                  <li><img src="./images/icon-planning.svg" alt="planning icon">Planning</li>
-                </ul>
-              <li id="company">Company</li>
-                <ul>
-                  <li>History</li>
-                  <li>Our Team</li>
-                  <li>Blog</li>
-                </ul>
+            <button id="menu"><img src="./images/icon-menu.svg" alt="menu icon"></button>
+            <ul>
+              <li><button id="features">Features</button></li>
+                <div class="dropdown-content" id="dropdown-features">
+                  <ul>
+                    <li><img src="./images/icon-todo.svg" alt="todo icon">Todo List</li>
+                    <li><img src="./images/icon-calendar.svg" alt="calendar icon">Calendar</li>
+                    <li><img src="./images//icon-reminders.svg" alt="reminder icon">Reminders</li>
+                    <li><img src="./images/icon-planning.svg" alt="planning icon">Planning</li>
+                  </ul>
+                </div>
+              <li><button id="company">Company</button></li>
+                <div class="dropdown-content" id="dropdown-company">
+                  <ul class="dropdown-content">
+                    <li>History</li>
+                    <li>Our Team</li>
+                    <li>Blog</li>
+                  </ul>
+                </div>
               <li>Careers</li>
               <li>About</li>
             </ul>
@@ -38,9 +53,9 @@
             <ul>
               <li id="login">Login</li>
               <li id="register">Register</li>          
-            </ul> -->
+            </ul>
           </li>
-        </ul>
+        </ul> -->
       </nav>
     
       <div class="landing">
@@ -53,7 +68,7 @@
             <h1>Make remote work</h1>
             <p>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>          
     
-            <button>Learn more</button>
+            <button class="learn-more">Learn more</button>
           </div>
           <div class="client-list">
             <picture>
